--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,10 @@ header a {
   text-decoration: none;
   color: #e7f3f9;
 }
+
+.checkbox-container {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
